Change URLs in meta tags for new deployment
Updated canonical and social media meta tags to reflect new URL.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="https://wish-iota-nine.vercel.app/" />
+    <link rel="apple-touch-icon" href="https://wish-iota-nine.vercel.app/" />
     
     <!-- Primary Meta Tags -->
     <title>Wish Theory | AI Manifestation Generator & Affirmation Tool</title>
@@ -12,21 +15,21 @@
     <meta name="keywords" content="manifestation generator, AI affirmations, vision board maker, law of attraction tool, spiritual tech, scripting generator, manifestation coach" />
     <meta name="author" content="Wish Theory" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://wish-theory.app" />
+    <link rel="canonical" href="https://wish-iota-nine.vercel.app/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://wish-theory.app" />
+    <meta property="og:url" content="https://wish-iota-nine.vercel.app/" />
     <meta property="og:title" content="Wish Theory | AI Manifestation Generator" />
     <meta property="og:description" content="Create personalized manifestation plans with AI. Affirmations, scripting, and vision boards tailored to your intentions." />
-    <meta property="og:image" content="https://wish-theory.app/og-image.jpg" />
+    <meta property="og:image" content="https://github.com/vivek2034/WISH-THEORY/blob/main/assets/logo.png?raw=true" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://wish-theory.app" />
+    <meta property="twitter:url" content="https://wish-iota-nine.vercel.app/" />
     <meta property="twitter:title" content="Wish Theory | AI Manifestation Generator" />
     <meta property="twitter:description" content="Align your reality with AI-powered manifestation tools. Personalized for your unique journey." />
-    <meta property="twitter:image" content="https://wish-theory.app/og-image.jpg" />
+    <meta property="twitter:image" content="https://github.com/vivek2034/WISH-THEORY/blob/main/assets/logo.png?raw=true" />
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
